test/types/records/intents/out-intent-error-array1.good
out-intent-error-array1.chpl:10: In function 'outPartialArray1':
out-intent-error-array1.chpl:10: error: 'arr' is not initialized and has no type
note: the type for a generic out intent argument is inferred from the function body
